# ember

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TEST_AUDIT_REPORT.md  docker-compose.yml  entrypoint.py  pyproject.toml  test_copilot_suggestions.py  test_review_suggestions.py  test_weather_variables.py
docs/: CACHING.md  COG_PIPELINE.md  LANDFIRE_LAYERS.md  SATELLITE_TRACKING.md  WEATHER_ENDPOINTS_IMPLEMENTATION_PLAN.md
scripts/: sync_landfire.sh
shared/: ember_client.py
src/ember/: __init__.py  auth.py  config.py  exceptions.py  logging.py  main.py
src/ember/api/: __init__.py  error_handlers.py  logging_middleware.py  middleware.py
src/ember/data/: __init__.py  bps_codes.json  evt_codes.json  fdist_codes.json
src/ember/routers/: __init__.py  fires.py  fuel.py  geocode.py  imagery.py  nws.py  satellite.py  scenes.py  terrain.py  vegetation.py  weather.py
src/ember/services/: __init__.py  airquality.py  cog.py  copernicus.py  firms.py  landfire.py  nominatim.py  nws.py  openmeteo.py  overpass.py  satellite.py  sentinel_cog.py  stac.py  terrain.py
tests/: test_airquality_router.py  test_anomaly_baseline.py  test_auth.py  test_fire_timeline.py  test_full_extent_overviews.py  test_imagery_truecolor.py  test_max_size_param.py  test_nws_router.py  test_overpass_service.py  test_satellite.py  test_satellite_router.py  test_scenes_router.py  test_sentinel_cog.py  test_stac_service.py  test_terrain_bbox.py  test_terrain_new_layers.py  test_terrain_raster_caching.py  test_terrain_router_bbox.py  test_vegetation_endpoints.py
