[project]
name = "ember"
version = "0.1.0"
description = "Direct API proxy for wildfire data - feeds Nova frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    # Clustering
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "pyproj>=3.6.0",
    # COG / Raster support
    "rasterio>=1.4.0",
    "rio-tiler>=7.0.0",
    "rio-cogeo>=7.0.1",
    "boto3>=1.42.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ember"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.8.0",
]
